--- a/index.html
+++ b/index.html
@@ -181,13 +181,68 @@
 
 				</li>
 				<li>
-					<i class='bx bxs-group'></i>
+					<p class="title">Employees on Leave
+						<hr>
+					</p>
+					<div class="details">
+					<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+					<!-- <div>Bhupendra Jogi</div> -->
+					<div class="date">10 <sup>th</sup>April 2024 </div>
+				</div>
+				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+					<!-- <div>Bhupendra Jogi</div> -->
+					<div class="date">10 <sup>th</sup>April 2024 </div>
+				</div>
+				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+					<!-- <div>Bhupendra Jogi</div> -->
+					<div class="date">10 <sup>th</sup>April 2024 </div>
+				</div>
+				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+					<!-- <div>Bhupendra Jogi</div> -->
+					<div class="date">10 <sup>th</sup>April 2024 </div>
+				</div>
+				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+					<!-- <div>Bhupendra Jogi</div> -->
+					<div class="date">10 <sup>th</sup>April 2024 </div>
+				</div>
+					
+				</div>
+					<style>
+						.details{
+							display: grid;
+							gap: 10px;
+
+						}
+						.info{
+							display: flex;
+							justify-content: space-between;
+							align-items: center;
+						}
+						.details img{
+							height: 30px;
+						}
+						.details .date{
+							font-size: 10px;
+						}
+					</style>
+				</li>
+				<li>
+					<i class='bx bxs-dollar-circle'></i>
 
 				</li>
 				<li>
 					<i class='bx bxs-dollar-circle'></i>
 
 				</li>
+				<li>
+					<i class='bx bxs-dollar-circle'></i>
+
+				</li>
+				<li>
+					<i class='bx bxs-dollar-circle'></i>
+
+				</li>
+				
 			</ul>
 		</main>
 		<!-- MAIN -->
