--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="cir.css">
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 	<!-- My CSS -->
 	<link rel="stylesheet" href="style.css">
 	<title>TAE</title>
@@ -185,49 +186,34 @@
 						<hr>
 					</p>
 					<div class="details">
-					<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
-					<!-- <div>Bhupendra Jogi</div> -->
+					<div class="info" style=" height: 40px;"> <div class="user"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+		
 					<div class="date">10 <sup>th</sup>April 2024 </div>
 				</div>
-				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
-					<!-- <div>Bhupendra Jogi</div> -->
+				<div class="info" style=" height: 40px;"> <div class="user"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+		
 					<div class="date">10 <sup>th</sup>April 2024 </div>
 				</div>
-				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
-					<!-- <div>Bhupendra Jogi</div> -->
+				<div class="info" style=" height: 40px;"> <div class="user"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+		
 					<div class="date">10 <sup>th</sup>April 2024 </div>
 				</div>
-				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
-					<!-- <div>Bhupendra Jogi</div> -->
+				<div class="info" style=" height: 40px;"> <div class="user"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+		
 					<div class="date">10 <sup>th</sup>April 2024 </div>
 				</div>
-				<div class="info" style=" height: 40px;"> <div style="display: flex; align-items: center;"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
-					<!-- <div>Bhupendra Jogi</div> -->
+				<div class="info" style=" height: 40px;"> <div class="user"><img src="/img/user.png" alt=""> Bhupendra Jogi</div>
+		
 					<div class="date">10 <sup>th</sup>April 2024 </div>
 				</div>
 					
 				</div>
-					<style>
-						.details{
-							display: grid;
-							gap: 10px;
-
-						}
-						.info{
-							display: flex;
-							justify-content: space-between;
-							align-items: center;
-						}
-						.details img{
-							height: 30px;
-						}
-						.details .date{
-							font-size: 10px;
-						}
-					</style>
 				</li>
 				<li>
-					<i class='bx bxs-dollar-circle'></i>
+					<p class="title">Announcements
+						<hr>
+					</p>
+					<i class='fas fa-volume-up'></i>
 
 				</li>
 				<li>
