--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 	<!-- My CSS -->
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="mac.css">
 	<title>TAE</title>
 </head>
 
@@ -23,44 +24,44 @@
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
-				<a href="#">
+				<a href="index.html">
 					<i class='bx bxs-dashboard'></i>
 					<span class="text">Dashboard</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="academics.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
 					<span class="text">Academics</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="notices.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Notices</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="timetable.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Time Table</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="leaves.html">
 					<i class='bx bxs-group'></i>
 					<span class="text">Leaves</span>
 				</a>
 			</li>
 
 			<li>
-				<a href="#">
+				<a href="students.html">
 					<i class='bx bxs-group'></i>
 					<span class="text">Student Info</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="feedback.html">
 					<i class='bx bxs-group'></i>
 					<span class="text">Feedback</span>
 				</a>
@@ -106,8 +107,8 @@
 				<span class="num">8</span>
 			</a>
 
-			<a href="#" class="profile">
-				<img src="img/user.png">
+			<a href="#" class="profile" >
+				<p>Welcome:Userxyz</p>	<img src="img/user.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -138,19 +139,21 @@
 						<hr>
 					</p>
 					<div style="display: grid; grid-template-columns: repeat(2,1fr);">
-						<div ><p class="total" style="font-size: 12px; font-weight: 600;">Total Student: 100</p>
+						<div>
+							<p class="total" style="font-size: 12px; font-weight: 600;">Total Student: 100</p>
 
 						</div>
 						<div style="font-size: 12px; font-weight: 600;"><label for="cars">View:</label>
-							<select name="class" style="border: none;"  >
+							<select name="class" style="border: none;">
 								<option value="volvo">Second Year</option>
 								<option value="saab">Third Year</option>
 								<option value="opel">Final Year</option>
 								<option value="audi">None</option>
-							</select></div>
+							</select>
+						</div>
 					</div>
-					
-					
+
+
 
 
 					<div class="progress">
@@ -182,11 +185,6 @@
 							<h3>8 <br> Absent
 							</h3>
 						</div>
-						<!-- <div class="count" style="background-color: rgba(197, 200, 50, 0.596);color: rgb(255, 213, 0);">
-							<h3>1 <br> Leave
-							</h3>
-						</div> -->
-
 						<div class="count" style="background-color: rgba(0, 191, 255, 0.596);color: blue;">
 							<h3>12 <br> Total
 							</h3>
@@ -229,14 +227,14 @@
 					</div>
 				</li>
 				<li>
-					<p class="title">Announcements
+					<p class="title">Announcements <i class="fa-solid  fa-triangle-exclamation fa-fade"></i>
 						<hr>
 					</p>
 
 					<div class="announce">
 
 						<div class="info">
-							<div class="user"> <i class='fas fa-volume-up'></i> Staff Meeting</div>
+							<div class="user"> <i class='fas fa-bell'></i> Staff Meeting</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
@@ -302,11 +300,150 @@
 
 				</li>
 				<li>
-					<i class='bx bxs-dollar-circle'></i>
+					<p class="title">Holidays
+						<hr>
+					</p>
+					<div class="details">
+						<div class="info">
+							<div class="user"><img src="/img/makar.png" alt="">Makar Sankranti</div>
 
+							<div class="date">10 <sup>th</sup>April 2024 </div>
+						</div>
+						<div class="info">
+							<div class="user"><img src="/img/holi.png" alt=""> Holi</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user"><img src="/img/rak.png" alt=""> Rakshabandhan</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user"><img src="/img/diwali.png" alt=""> Diwali</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user"><img src="/img/santa.png" alt=""> Christmas</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user"><img src="/img/newyear.png" alt=""> New Year</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+
+					</div>
 				</li>
 				<li>
-					<i class='bx bxs-dollar-circle'></i>
+					<p class="title">NewsLetter
+						<hr>
+					</p>
+					<div class="macbook">
+						<div class="inner1">
+						  <div class="screen">
+							<div class="face-one">
+							  <div class="camera"></div>
+							  <div class="display">
+								<div class="shade"></div>
+							  </div>
+							  <span>MacBook Air</span>
+							</div>
+						<title>Layer 1</title>
+						</div>
+						  <div class="macbody">
+							<div class="face-one">
+							  <div class="touchpad">
+							  </div>
+							  <div class="keyboard">
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key space"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+								<div class="key f"></div>
+							  </div>
+							</div>
+							<div class="pad one"></div>
+							<div class="pad two"></div>
+							<div class="pad three"></div>
+							<div class="pad four"></div>
+						  </div>
+						</div>
+						<div class="shadow"></div>
+					  </div>
+
 
 				</li>
 
