--- a/academics_be.html
+++ b/academics_be.html
@@ -135,20 +135,20 @@
 			<section class="main-course">
 				<h1>My Subjects</h1>
 				<div class="course-box">
-				  <ul>
-					<li class="active"> <a href="academics.html">Second Year</a> </li>
-					<li> <a href="academics_te.html">Third Year</a> </li>
-					<li>  <a href="academics_be.html">Final Year</a> </li>
-				  </ul>
+					<ul>
+						<li > <a href="academics.html">Second Year</a> </li>
+						<li> <a href="academics_te.html">Third Year</a> </li>
+						<li class="active">  <a href="academics_be.html">Final Year</a> </li>
+					  </ul>
 				  <div class="course">
 					<div class="box">
 					  <h3>HTML</h3>
-					  <p>8 lectures conducted</p>
-					 <a href="attendance_form.html">  <button> See Attendance </button></a> 
+					  <!-- <p>8 lectures conducted</p>
+					  <button>See Attendance</button>
 					  <i class="fab fa-html5 html"></i>
 					</div>
 					<div class="box">
-					  <h3>CSS</h3>
+					  <h3>CSS</h3> -->
 					  <p>5 lectures conducted</p>
 					  <a href="attendance_form.html">  <button> See Attendance </button></a>
 					  <i class="fab fa-css3-alt css"></i>
