new changes made

--- a/academics.html
+++ b/academics.html
@@ -143,18 +143,23 @@
 				  <div class="course">
 					<div class="box">
 					  <h3>HTML</h3>
+					  <p>Second Year (3<sup style="text-transform: lowercase;">rd</sup> Semester)</p>
 					  <p>8 lectures conducted</p>
+					  
 					 <a href="attendance_form.html">  <button> See Attendance </button></a> 
 					  <i class="fab fa-html5 html"></i>
 					</div>
 					<div class="box">
 					  <h3>CSS</h3>
+					  <p>Second Year (4<sup style="text-transform: lowercase;">th</sup> Semester)</p>
 					  <p>5 lectures conducted</p>
+					  
 					  <a href="attendance_form.html">  <button> See Attendance </button></a>
 					  <i class="fab fa-css3-alt css"></i>
 					</div>
 					<div class="box">
 					  <h3>Practical Labs</h3>
+					  <p>3 labs conducted</p>
 					  <p>3 labs conducted</p>
 					  <a href="attendance_form.html">  <button> See Attendance </button></a>
 					  <i class="fab fa-js-square js"></i>
