--- a/academics_be.html
+++ b/academics_be.html
@@ -149,6 +149,7 @@
 					</div>
 					<div class="box">
 					  <h3>CSS</h3> -->
+					  <p>Final Year (7<sup style="text-transform: lowercase;">th</sup> Semester)</p>
 					  <p>5 lectures conducted</p>
 					  <a href="attendance_form.html">  <button> See Attendance </button></a>
 					  <i class="fab fa-css3-alt css"></i>
