--- a/academics_te.html
+++ b/academics_te.html
@@ -150,13 +150,15 @@
 					  <i class="fab fa-html5 html"></i>
 					</div>
 					<div class="box">
-					  <h3>CSS</h3>
-					  <p>5 lectures conducted</p> -->
+					  <h3>CSS</h3> -->
+					  <p>Third Year (5<sup style="text-transform: lowercase;">th</sup> Semester)</p>
+					  <p>5 lectures conducted</p>
 					  <a href="attendance_form.html">  <button> See Attendance </button></a>
 					  <i class="fab fa-css3-alt css"></i>
 					</div>
 					<div class="box">
 					  <h3>Practical Labs</h3>
+					  <p>Second Year (4<sup style="text-transform: lowercase;">th</sup> Semester)</p>
 					  <p>3 labs conducted</p>
 					  <a href="attendance_form.html">  <button> See Attendance </button></a>
 					  <i class="fab fa-js-square js"></i>
