new changes made

--- a/academics.html
+++ b/academics.html
@@ -30,7 +30,7 @@
 			</li>
 			<li>
 				<a href="academics.html">
-					<i class='bx bxs-shopping-bag-alt'></i>
+					<i class='bx bxs-calendar-star'></i>
 					<span class="text">Academics</span>
 				</a>
 			</li>
