--- a/attendance_form.html
+++ b/attendance_form.html
@@ -31,7 +31,7 @@
 			</li>
 			<li>
 				<a href="academics.html">
-					<i class='bx bxs-shopping-bag-alt'></i>
+					<i class='bx bxs-calendar-star'></i>
 					<span class="text">Academics</span>
 				</a>
 			</li>
