new changes made

--- a/academics_te.html
+++ b/academics_te.html
@@ -9,7 +9,8 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 	<!-- My CSS -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/assets/style/style.css">
+	<link rel="stylesheet" href="/assets/style/mac.css">
 	<title>TAE</title>
 </head>
 
@@ -107,7 +108,7 @@
 			</a>
 
 			<a href="#" class="profile">
-				<img src="img/user.png">
+				<img src="/assets/img/user.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -248,7 +249,7 @@ a{
 	<!-- CONTENT -->
 
 
-	<script src="script.js"></script>
+	<script src="assets/script/script.js"></script>
 
 </body>
 
