--- a/attendance_form.html
+++ b/attendance_form.html
@@ -139,8 +139,8 @@
 					<form action="/submit_form" method="post">
 						<div class="row">
 							<div class="column">
-								<label for="load_type">Load Type:</label>
-								<input type="text" id="load type" name="load type" required>
+								<label for="load_type">Load Type: <span class="name">Amit Das</span> </label>
+								
 							</div>
 							<div class="column">
 								<label for="year">Year:</label>
